# ISMIR2019-Large-Vocabulary-Chord-Recognition

./: .gitignore  INSTALL.md  MANIFEST.in  README.MD  __init__.py  chord_recognition.py  chordnet_ismir_naive.py  output_chords.lab  pyproject.toml  setup.py
extractors/: __init__.py  complex_chord_preprocess.py  cqt.py  ismir2017_chord_extractor.py  xhmm_ismir.py
io_new/: __init__.py
mir/: __init__.py  data_file.py
mir/extractors/: __init__.py  extractor_base.py
mir/nn/: train.py
src/lvcr_ismir2019/: __init__.py  chord_recognition.py  chordnet_ismir_naive.py  chordnet_ismir_naive_eval.py  complex_chord.py  datasets.py  results.py  results_ismir2017.py  settings.py  storage_creation.py  test_for_all.py  train_eval_test_split.py
src/lvcr_ismir2019/extractors/: __init__.py  beat_preprocess.py  beat_preprocess_legacy.py  chordino.py  cnn_features.py  complex_chord_preprocess.py  cqt.py  ismir2017_chord_extractor.py  jam_converter.py  key_preprocess.py  torch_helper.py  wave_extractor.py  xhmm_decoder.py  xhmm_ismir.py
src/lvcr_ismir2019/io_new/: __init__.py  air_io.py  beat_align_io.py  complex_chord_io.py  downbeat_io.py  lyric_io.py  madmom_io.py  midilab_io.py
src/lvcr_ismir2019/mir/: common.py  data_file.py  settings.py
src/lvcr_ismir2019/mir/extractors/: __init__.py  extractor_base.py  misc.py  vamp_extractor.py
src/lvcr_ismir2019/mir/io/implement/: chroma_io.py  midi_io.py  music_io.py  regional_spectrogram_io.py  scalar_io.py  spectrogram_io.py  unknown_io.py
src/lvcr_ismir2019/mir/nn/: data_storage.py  train.py
