[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lvcr_ismir2019"
version = "1.0.0"
description = "Large-Vocabulary Chord Transcription via Chord Structure Decomposition"
readme = "README.MD"
license = {file = "LICENSE"}
authors = [
    {name = "Junyan Jiang"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.7,<3.12"
dependencies = [
    "torch>=1.4.0",
    "pretty_midi>=0.2.9",
    "h5py>=2.9.0",
    "matplotlib>=2.2.4",
    "mir_eval>=0.5",
    "pydub>=0.23.1",
    "joblib>=0.13.2",
    "librosa>=0.7.2",
    "figures>=0.3.16",
    "jams>=0.3.4",
    "numpy>=1.19.2",
    "pumpp>=0.5.0",
    "scikit_learn>=0.23.2",
]

[project.urls]
Homepage = "https://github.com/username/ISMIR2019-Large-Vocabulary-Chord-Recognition"
Repository = "https://github.com/username/ISMIR2019-Large-Vocabulary-Chord-Recognition"
"Bug Tracker" = "https://github.com/username/ISMIR2019-Large-Vocabulary-Chord-Recognition/issues"

[project.scripts]
chord-recognition = "lvcr_ismir2019.chord_recognition:main"

[tool.setuptools.packages.find]
include = ["lvcr_ismir2019*"]

[tool.setuptools.package-data]
lvcr_ismir2019 = ["data/*", "cache_data/*"]
