[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lvcr-ismir2019"          # ✅ 连字符（项目名）
version = "1.0.0"
description = "Large Vocabulary Chord Recognition"
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "numpy>=1.20",
    "librosa>=0.9",
    "torch>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lvcr_ismir2019"]  # ✅ 指定包位置
