[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lvcr-ismir2019"          # ✅ 连字符（项目名）
version = "1.0.0"
description = "Large Vocabulary Chord Recognition"
requires-python = ">=3.8,<3.12"
dependencies = [
    "numpy>=1.20",
    "librosa>=0.9",
    "pydub>=0.25.1",
    "pretty-midi",
    "h5py>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lvcr_ismir2019"]  # ✅ 指定包位置

[tool.uv.sources]
pretty-midi = { git = "https://github.com/chenkigba/pretty-midi.git" }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true